<resources>
    <string name="app_name">JavaChat</string>
    <string name="empty_string_err">This field can not be empty!</string>
    <string name="incorrect_email_err">Incorrect email address</string>
    <string name="shor_pass_err">Password is too short</string>
    <string name="unequal_pass_err">Passwords are not equal</string>
    <string name="add_image">Add image</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_nickname">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_acc_button">Sign up</string>
    <string name="enter_data_to_register_text">Enter your email address and password to sign up</string>
    <string name="enter_name_text">Name</string>
    <string name="enter_ur_nickname_tv">Nick name</string>
    <string name="enter_bio_tv">Enter your bio</string>
    <string name="finish">Finish</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_continue">Log in to continue</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Create new account</string>
    <string name="example_user_name">Ivan Petrov</string>
    <string name="example_message">Hey, how are u?</string>
    <string name="invalid_pass_err">Invalid password</string>
    <string name="no_such_user">User with such email and password is not registered</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="log_in_text">Log In</string>
    <string name="show">Show</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="_12_34pm">12:34 PM</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="online">online</string>
    <string name="search_ed">Search...</string>
    <string name="global_search">Global search</string>
    <string name="my_contacts">My contacts</string>
</resources>