<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.logIn.LogInFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/chat_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"
        android:src="@mipmap/ic_launcher_round"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/chat_image"
        app:layout_constraintBottom_toTopOf="@id/login_to_continue_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        />

    <TextView
        android:id="@+id/login_to_continue_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintBottom_toTopOf="@id/log_in_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_in_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_to_continue_tv"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:layout_marginBottom="100dp"
        android:focusableInTouchMode="true"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/log_in_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/log_in_password"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_background"
            android:padding="10dp"
            android:paddingStart="16sp"
            />

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/log_in_email"
            app:layout_constraintStart_toStartOf="@id/log_in_email"
            app:layout_constraintEnd_toEndOf="@id/log_in_email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_background"
            android:padding="10dp"
            android:paddingStart="16sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_form"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/button_background"
            />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/log_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>