<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RegisterFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_launcher_round"
        />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_to_register_text"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_acc_form"
        android:layout_marginHorizontal="30dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_acc_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:focusedByDefault="true">

        <EditText
            android:id="@+id/email_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_ed"
            android:paddingStart="16sp"
            android:padding="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="30dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/email_ed"
            app:layout_constraintStart_toStartOf="@id/email_ed"
            app:layout_constraintEnd_toEndOf="@id/email_ed"
            app:layout_constraintBottom_toTopOf="@id/password_twice_ed"
            android:paddingStart="16sp"
            android:padding="8dp"
            android:layout_marginVertical="8dp"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/password_twice_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/input_background"
            app:layout_constraintTop_toBottomOf="@id/password_ed"
            app:layout_constraintStart_toStartOf="@id/email_ed"
            app:layout_constraintEnd_toEndOf="@id/email_ed"
            app:layout_constraintBottom_toBottomOf="@id/password_ed"
            android:paddingStart="16sp"
            android:padding="8dp"
            android:layout_marginVertical="8dp"
            android:inputType="textPassword"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_acc_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="250dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_acc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:text="@string/create_acc_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>